# gnss_serial

./: 99-gnss.rules  CMakeLists.txt  package.xml  set_udev.sh
include/gnss_serial/: gnss_serial.hpp
launch/: gnss_serial.launch.py
log/: latest_list
src/: gnss_serial.cpp  serialib.cpp  test.py
